--- a/template - resturant_cafe - responsive/index.html
+++ b/template - resturant_cafe - responsive/index.html
@@ -9,6 +9,34 @@
 </head>
 <body>
     <header>
+        <nav class="navbar">
+            <a href="#" class="nav-logo">
+                <h2 class="logo-text">Restaurant-Cafe</h2>
+            </a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Testimonials</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Gallery</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Account</a>
+                </li>
+            </ul>
+        </nav>
         
     </header>
     
