--- a/template - resturant_cafe - responsive/index.html
+++ b/template - resturant_cafe - responsive/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <nav class="navbar">
             <a href="#" class="nav-logo">
@@ -37,7 +38,6 @@
                 </li>
             </ul>
         </nav>
-        
     </header>
     
 </body>
